chore: 인덱스 매핑·색인 서비스에서 description 제거 및 냉장고 리포지토리 확장